--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "prettier": "^2.8.3"
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.3",
+    "superagent": "^8.0.8"
   }
 }
